version/0.16/_sources/api/solver/_autosummary/settings/controls_1.rst.txt
:orphan:

.. _controls_1:

controls
========

.. autoclass:: ansys.fluent.core.solver.settings_232.controls_1.controls
    :show-inheritance:

.. rubric:: Attributes

======================================================================================   ===================================================================

Attribute                                                                                                                                            Summary

======================================================================================   ===================================================================
:ref:`courant_number <courant_number>`                                                                  Set the fine mesh Courant number (time step factor).

:ref:`p_v_controls <p_v_controls>`                                                                                                         Set P-V-Controls.

:ref:`relaxation_factor <relaxation_factor_1>`                                                                                    'relaxation_factor' child.

:ref:`under_relaxation <under_relaxation_1>`                                                                                    Enter Under Relaxation Menu.

:ref:`pseudo_time_method_local_time_step <pseudo_time_method_local_time_step>`                                   'pseudo_time_method_local_time_step' child.

:ref:`pseudo_time_explicit_relaxation_factor <pseudo_time_explicit_relaxation_factor>`                       'pseudo_time_explicit_relaxation_factor' child.

:ref:`acoustics_wave_eqn_controls <acoustics_wave_eqn_controls>`                                     Enter menu for acoustics wave equation solver controls.

:ref:`contact_solution_controls <contact_solution_controls>`                                                       Solver controls for contact marks method.

:ref:`equations <equations>`                                                                                                              'equations' child.

:ref:`limits <limits>`                                                                       Set solver limits for the values of various solution variables.

:ref:`advanced <advanced>`                                                                                                                 'advanced' child.

======================================================================================   ===================================================================

.. rubric:: Methods

======================================================================================   =====================================================

Method                                                                                                                                 Summary

======================================================================================   =====================================================
:ref:`reset_solution_controls <reset_solution_controls>`                                                    'reset_solution_controls' command.

:ref:`reset_amg_controls <reset_amg_controls>`                                                                   'reset_amg_controls' command.

:ref:`reset_multi_stage_parameters <reset_multi_stage_parameters>`                                     'reset_multi_stage_parameters' command.

:ref:`reset_limits <reset_limits>`                                                                                     'reset_limits' command.

:ref:`reset_pseudo_time_method_generic <reset_pseudo_time_method_generic>`                         'reset_pseudo_time_method_generic' command.

:ref:`reset_pseudo_time_method_equations <reset_pseudo_time_method_equations>`                   'reset_pseudo_time_method_equations' command.

:ref:`reset_pseudo_time_method_relaxations <reset_pseudo_time_method_relaxations>`             'reset_pseudo_time_method_relaxations' command.

:ref:`reset_pseudo_time_method_scale_factors <reset_pseudo_time_method_scale_factors>`       'reset_pseudo_time_method_scale_factors' command.

======================================================================================   =====================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`solution <solution>`       'solution' child.

==========================   =====================

