version/0.22/_sources/api/solver/_autosummary/settings/controls_1.rst.txt
:orphan:

.. _controls_1:

controls
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.controls_1.controls
    :show-inheritance:

.. rubric:: Attributes

======================================================================================   ===================================================================

Attribute                                                                                                                                            Summary

======================================================================================   ===================================================================
:ref:`courant_number <courant_number>`                                                                  Set the fine mesh Courant number (time step factor).

:ref:`p_v_controls <p_v_controls>`                                                                                                         Set P-V-Controls.

:ref:`relaxation_factor <relaxation_factor_1>`                                                                               Enter explicit relaxation menu.

:ref:`under_relaxation <under_relaxation_2>`                                                                                    Enter Under Relaxation Menu.

:ref:`pseudo_time_method_local_time_step <pseudo_time_method_local_time_step>`                       Enter pseudo time method local time step settings menu.

:ref:`pseudo_time_explicit_relaxation_factor <pseudo_time_explicit_relaxation_factor>`                    Enter pseudo time explicit relaxation factor menu.

:ref:`acoustics_wave_eqn_controls <acoustics_wave_eqn_controls>`                                     Enter menu for acoustics wave equation solver controls.

:ref:`contact_solution_controls <contact_solution_controls>`                                                       Solver controls for contact marks method.

:ref:`equations <equations>`                                                                                                     Set equations to be solved.

:ref:`limits <limits>`                                                                       Set solver limits for the values of various solution variables.

:ref:`advanced <advanced_3>`                                                                                            Enter solution method advanced menu.

:ref:`species_urf_together <species_urf_together>`                                                             Enable/disable Set all species URFs together.

======================================================================================   ===================================================================

.. rubric:: Methods

======================================================================================   ==============================================================

Method                                                                                                                                          Summary

======================================================================================   ==============================================================
:ref:`reset_solution_controls <reset_solution_controls>`                                                        Reset the solution controls to default.

:ref:`reset_amg_controls <reset_amg_controls>`                                                                            Rest AMG controls to default.

:ref:`reset_multi_stage_parameters <reset_multi_stage_parameters>`                                                        Reset multi-stage parameters.

:ref:`reset_limits <reset_limits>`                                                                                             Reset limits to default.

:ref:`reset_pseudo_time_method_generic <reset_pseudo_time_method_generic>`                                Set pseudo time method parameters to default.

:ref:`reset_pseudo_time_method_equations <reset_pseudo_time_method_equations>`               Set pseudo time method equation specific usage to default.

:ref:`reset_pseudo_time_method_relaxations <reset_pseudo_time_method_relaxations>`                Set pseudo time method relaxation factors to default.

:ref:`reset_pseudo_time_method_scale_factors <reset_pseudo_time_method_scale_factors>`            Set pseudo time method time scale factors to default.

======================================================================================   ==============================================================

.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`solution <solution>`       'solution' child.

==========================   =====================

